* Removed deps.txt                            * Removed TrainerCountHealthIndicator class that was no longer used                            * Removed some unused imports                            * Replaced 3 repeated Strings for constants                            * Replaced deprecated methods                            * Deleted 2 unused parameters from method calls                            * Deleted 4 unused methods                            * Deleted 2 deprecated test                            * Modified 3 tests to adhere to new functionalities                            * Deleted several unused Mocks from tests                            * Implemented several new tests for untested methods and Microservice classes                            * Set JaCoCo at 80% coverage                            * Reached 87% of test coverage                            * Replaced dependencies with known vulnerabilities                            * Fixed All SonarQube warnings                            * Updated README